--- a/css/main.css
+++ b/css/main.css
@@ -14,13 +14,11 @@ Author: Bryce Mercines 2018*/
 /*editor css*/
 
  #editor { 
-       /* top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;*/
-        width: 550px;
-        height: 150px;
-        border-radius: 10px;
+        height: 100vh;
+        width: 100vw;
+        display: none;
+        border: 0px;
+
     }
 
 #about {
